tools/tests/errors/surf_parse_13.ki
# PARSER: a positional argument supplied after a keyword argument in a call
var f = Function(a, b):
    return a
discard f(a = 1, 2)